--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Static Site</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ShopSmart - E-commerce</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello from Docker + Nginx!</h1>
-  <p>This is a simple static site served with Nginx and styled with CSS.</p>
+
+  <header>
+    <div class="logo">🛒 ShopSmart</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#" id="cart-link">Cart (0)</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Welcome to ShopSmart</h1>
+    <p>Great Deals. Fast Delivery. Trusted Quality.</p>
+  </section>
+
+  <main class="products">
+    <h2>Featured Products</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200" alt="Product 1" />
+        <h3>Product 1</h3>
+        <p>$19.99</p>
+        <button onclick="addToCart('Product 1', 19.99)">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200" alt="Product 2" />
+        <h3>Product 2</h3>
+        <p>$24.99</p>
+        <button onclick="addToCart('Product 2', 24.99)">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200" alt="Product 3" />
+        <h3>Product 3</h3>
+        <p>$15.00</p>
+        <button onclick="addToCart('Product 3', 15.00)">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200" alt="Product 4" />
+        <h3>Product 4</h3>
+        <p>$29.99</p>
+        <button onclick="addToCart('Product 4', 29.99)">Add to Cart</button>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 ShopSmart. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
